se arreglo laboratorista.html y parcial sesiones

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.13.4",
     "mongoose": "^4.5.9",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "client-sessions": "~0.7.0"
   }
 }
