--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.3.0",
     "body-parser": "~1.15.1",
+    "client-sessions": "~0.7.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
     "express": "~4.13.4",
     "mongoose": "^4.5.9",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0",
-    "client-sessions": "~0.7.0"
+    "serve-favicon": "~2.3.0"
   }
 }
